--- a/style.css
+++ b/style.css
@@ -84,13 +84,12 @@ h3 {
 }
 
 footer {
-  text-align: right;
+  text-align: center;
   background-color: #FF4500;
   font-family: 'Karla', sans-serif;
 }
 
 footer p {
-  padding-right: 20px;
   color: #F5F5F5;
 }
 
