--- a/css/fourth-section.css
+++ b/css/fourth-section.css
@@ -1,5 +1,5 @@
 .big-pic2{
-  background:url(/images/2.png) no-repeat center center fixed;
+  background:url(/images/2small.png) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   height: 600px;
