--- a/css/media.css
+++ b/css/media.css
@@ -20,6 +20,9 @@
     background:url(/images/1crop.png) no-repeat center center fixed;
     width: 100%;
     background-size: auto 100%;
+    -webkit-background-size: auto 100%;
+    -moz-background-size: auto 100%;
+    -o-background-size: auto 100%;
   }
 
 
@@ -57,7 +60,10 @@
   .big-pic2{
     background:url(/images/2crop.png) no-repeat center center fixed;
     width: 100%;
-    background-size:auto 100%;
+    background-size: auto 100%;
+    -webkit-background-size: auto 100%;
+    -moz-background-size: auto 100%;
+    -o-background-size: auto 100%;
   }
 
   .contact li a:hover{
