--- a/css/fourth-section.css
+++ b/css/fourth-section.css
@@ -2,6 +2,8 @@
   background:url(/images/2small.png) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   height: 600px;
   width: 100%;
 }
