--- a/css/first-section.css
+++ b/css/first-section.css
@@ -1,17 +1,18 @@
 h1 {
-  font-size: 2em;
-  color: #F5F5F5;
+  font-size: 2.5em;
+  color: tomato;
   text-align: center;
 }
 
 .sym {
   font-size: 3em;
   text-align: center;
+  color:#F5F5F5;
 }
 
 h3 {
   font-size: 1.5em;
-  color: gainsboro;
+  color: #F5F5F5;
   text-align: center;
 }
 
