temporary backgrounds substituting for images

--- a/css/media.css
+++ b/css/media.css
@@ -17,7 +17,7 @@
   }
 
   .big-pic{
-    background-image:url(/images/1crop.png) no-repeat center center fixed !important;
+    background-color: steelblue;
     background-size: auto 100%;
     -webkit-background-size: auto 100%;
     -moz-background-size: auto 100%;
@@ -57,7 +57,7 @@
   }
 
   .big-pic2{
-    background-image:url(/images/2crop.png) no-repeat center center fixed !important;
+    background-color:lemonchiffon;
     background-size: auto 100%;
     -webkit-background-size: auto 100%;
     -moz-background-size: auto 100%;
