--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 .navbar span a{
   display: inline;
-  font-size: 1.2s5em;
+  font-size: 1.25em;
   font-family: 'Karla', sans-serif;
   text-decoration: none;
   color: #FF4500;
